--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, doloribus!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A cupiditate at beatae distinctio doloremque dolore deleniti, doloribus eveniet, consequuntur nobis dicta, sunt velit repellat eius quisquam? Quibusdam blanditiis et unde!`</p>
+    <button>click me!</button>
 </body>
 </html>
